# ros1

./: README.md
binpicking/: CMakeLists.txt  package.xml
binpicking/config/: binpicking.rviz
binpicking/launch/: binpicking_demo_app.launch  binpicking_environment.launch  binpicking_pcl_devel.launch  binpicking_real_world_demo_app.launch  start_calculate_objectpose_from_pointcloud.launch  ur5e_bringup.launch  vacuum_gripper_bringup.launch  visualize_binpicking.launch
binpicking/scripts/: calculate_objectpose_from_pountcloud_client_test.py  capture_pointcloud_client.py  capture_pointcloud_server.py  test.py
binpicking/urdf/: binpicking_robot.urdf.xacro  binpicking_robot_robotiqgripper.urdf.xacro
binpicking/worlds/: binpicking.world
binpicking_behaviors/binpicking_flexbe_behaviors/: package.xml  setup.py
binpicking_behaviors/miscellaneous_flexbe_states/: CMakeLists.txt  package.xml  setup.py
binpicking_behaviors/robotiq_flexbe_states/: CMakeLists.txt  package.xml  setup.py
binpicking_behaviors/robotiq_flexbe_states/src/robotiq_flexbe_states/: epick_gripper_control_state.py
binpicking_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
binpicking_moveit_config_old/: .setup_assistant  CMakeListsOld.txt  packageOld.xml
binpicking_msgs/: CMakeLists.txt  package.xml
binpicking_msgs/srv/: CalculateObjectposeFromPointcloud.srv  CapturePointcloud.srv
binpicking_pcl/: CMakeLists.txt  package.xml
binpicking_pcl_devel/: CMakeLists.txt  package.xml
binpicking_support/: CMakeLists.txt  package.xml
documents/: Install Ubuntu Software.odt
(+82 files in other folders)
