<package>
  <name>robotiq_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     robotiq_flexbe_states provides a collection of custom states.
     Feel free to add new states.
  </description>
  <maintainer email="ga.harkema@avans.nl">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
